--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -5,10 +5,32 @@
   "description": "// TODO(HiDeoo)",
   "author": "HiDeoo <github@hideoo.dev> (https://hideoo.dev)",
   "type": "module",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "default": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
+    }
+  },
   "scripts": {
+    "dev": "tsup --watch",
+    "build": "tsup && cp dist/index.d.ts dist/index.d.cts",
     "test": "echo \"Error: no test implemented.\" && exit 1",
     "lint": "prettier -c --cache . && eslint . --cache --max-warnings=0 && tsc --noEmit",
     "prepublishOnly": "pnpm build"
+  },
+  "devDependencies": {
+    "tsup": "7.0.0",
+    "typescript": "5.1.3"
   },
   "engines": {
     "node": ">=18"
