feat: add basic integration with tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["@hideoo"]
+  "extends": ["@hideoo"],
+  "ignorePatterns": ["packages/starlight-links-validator/tests/fixtures"]
 }
