--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ next-env.d.ts
 node_modules
 npm-debug.log*
 out
+packages/starlight-links-validator/.tests
 pnpm-debug.log*
 releases
 yarn-debug.log*
