--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -24,13 +24,23 @@
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup && cp dist/index.d.ts dist/index.d.cts",
-    "test": "echo \"Error: no test implemented.\" && exit 1",
+    "test": "vitest",
     "lint": "prettier -c --cache . && eslint . --cache --max-warnings=0 && tsc --noEmit",
     "prepublishOnly": "pnpm build"
   },
+  "dependencies": {
+    "unist-util-visit": "4.1.2"
+  },
   "devDependencies": {
+    "@types/node": "18.16.18",
     "tsup": "7.0.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "unified": "10.1.2",
+    "vitest": "0.32.2"
+  },
+  "peerDependencies": {
+    "@astrojs/starlight": ">=0.0.1",
+    "astro": ">=2.5.0"
   },
   "engines": {
     "node": ">=18"
