--- a/packages/starlight-links-validator/tsconfig.json
+++ b/packages/starlight-links-validator/tsconfig.json
@@ -2,5 +2,6 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "incremental": false
-  }
+  },
+  "exclude": ["tests/fixtures"]
 }
