--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -32,6 +32,7 @@
     "unist-util-visit": "4.1.2"
   },
   "devDependencies": {
+    "@types/mdast": "3.0.11",
     "@types/node": "18.16.18",
     "tsup": "7.0.0",
     "typescript": "5.1.3",
