--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "github-slugger": "2.0.0",
+    "kleur": "4.1.5",
     "unist-util-visit": "4.1.2"
   },
   "devDependencies": {
