--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@types/mdast": "3.0.11",
     "@types/node": "18.16.18",
+    "mdast-util-mdx-jsx": "2.1.4",
     "tsup": "7.0.0",
     "typescript": "5.1.3",
     "unified": "10.1.2",
