--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "github-slugger": "2.0.0",
     "kleur": "4.1.5",
+    "mdast-util-to-string": "3.2.0",
     "unist-util-visit": "4.1.2"
   },
   "devDependencies": {
