--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "dev": "astro dev",
-    "build": "pnpm -F starlight-links-validator build && astro build",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
     "lint": "prettier -c --cache . && eslint . --cache --max-warnings=0"
