--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -5,28 +5,13 @@
   "description": "Astro integration for Starlight to validate internal links.",
   "author": "HiDeoo <github@hideoo.dev> (https://hideoo.dev)",
   "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
   "exports": {
-    "./package.json": "./package.json",
-    ".": {
-      "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      },
-      "default": {
-        "types": "./dist/index.d.cts",
-        "default": "./dist/index.cjs"
-      }
-    }
+    ".": "./index.ts",
+    "./package.json": "./package.json"
   },
   "scripts": {
-    "dev": "tsup --watch",
-    "build": "tsup && cp dist/index.d.ts dist/index.d.cts",
     "test": "vitest",
-    "lint": "prettier -c --cache . && eslint . --cache --max-warnings=0 && tsc --noEmit",
-    "prepublishOnly": "pnpm build"
+    "lint": "prettier -c --cache . && eslint . --cache --max-warnings=0 && tsc --noEmit"
   },
   "dependencies": {
     "github-slugger": "2.0.0",
@@ -38,7 +23,6 @@
     "@types/mdast": "3.0.11",
     "@types/node": "18.16.18",
     "mdast-util-mdx-jsx": "2.1.4",
-    "tsup": "7.0.0",
     "typescript": "5.1.3",
     "unified": "10.1.2",
     "vitest": "0.32.2"
@@ -55,9 +39,6 @@
     "access": "public"
   },
   "sideEffects": false,
-  "files": [
-    "dist"
-  ],
   "keywords": [
     "starlight",
     "links",
