--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -15,13 +15,17 @@
   },
   "dependencies": {
     "github-slugger": "2.0.0",
+    "hast-util-from-html": "2.0.1",
+    "hast-util-has-property": "3.0.0",
     "kleur": "4.1.5",
     "mdast-util-to-string": "3.2.0",
     "unist-util-visit": "4.1.2"
   },
   "devDependencies": {
+    "@types/hast": "3.0.0",
     "@types/mdast": "3.0.11",
     "@types/node": "18.16.18",
+    "astro": "2.10.9",
     "mdast-util-mdx-jsx": "2.1.4",
     "typescript": "5.1.3",
     "unified": "10.1.2",
