--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -22,21 +22,22 @@
     "unist-util-visit": "4.1.2"
   },
   "devDependencies": {
+    "@astrojs/starlight": "0.10.1",
     "@types/hast": "3.0.0",
     "@types/mdast": "3.0.11",
     "@types/node": "18.16.18",
-    "astro": "2.10.9",
+    "astro": "3.1.1",
     "mdast-util-mdx-jsx": "2.1.4",
     "typescript": "5.1.3",
     "unified": "10.1.2",
     "vitest": "0.32.2"
   },
   "peerDependencies": {
-    "@astrojs/starlight": ">=0.0.1",
-    "astro": ">=2.5.0"
+    "@astrojs/starlight": ">=0.9.0",
+    "astro": ">=3.0.0"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=18.14.1"
   },
   "packageManager": "pnpm@8.6.3",
   "publishConfig": {
