fix: file path normalization on Windows

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -12,7 +12,11 @@ on:
 jobs:
   lint_test:
     name: Lint & Test
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -35,8 +39,8 @@ jobs:
         run: pnpm astro sync
         working-directory: example
 
-      - name: Lint
-        run: pnpm lint
-
       - name: Test
         run: pnpm test
+
+      - name: Lint
+        run: pnpm lint
