--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,7 @@
 {
   "extends": ["@hideoo"],
-  "ignorePatterns": ["packages/starlight-links-validator/tests/fixtures"]
+  "ignorePatterns": ["packages/starlight-links-validator/tests/fixtures"],
+  "rules": {
+    "@typescript-eslint/no-redeclare": "off"
+  }
 }
