--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -31,6 +31,7 @@
     "mdast-util-mdx-jsx": "3.0.0",
     "typescript": "5.1.3",
     "unified": "11.0.4",
+    "vfile": "6.0.1",
     "vitest": "1.0.4"
   },
   "peerDependencies": {
