--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -20,6 +20,7 @@
     "is-absolute-url": "4.0.1",
     "kleur": "4.1.5",
     "mdast-util-to-string": "4.0.0",
+    "picomatch": "4.0.2",
     "unist-util-visit": "5.0.0"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/hast": "3.0.3",
     "@types/mdast": "4.0.3",
     "@types/node": "18.17.18",
+    "@types/picomatch": "2.3.3",
     "astro": "4.0.4",
     "mdast-util-mdx-jsx": "3.0.0",
     "typescript": "5.1.3",
