--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
   "scripts": {
     "test": "pnpm --stream -r test",
     "lint": "pnpm -r lint",
-    "prepare": "husky install"
+    "format": "pnpm -r format"
   },
   "devDependencies": {
     "@hideoo/eslint-config": "2.0.1",
     "@hideoo/prettier-config": "2.0.0",
     "@hideoo/tsconfig": "2.0.1",
     "eslint": "8.49.0",
-    "husky": "8.0.3",
-    "lint-staged": "14.0.1",
     "prettier": "3.0.3",
     "typescript": "5.1.3"
   },
