--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "test": "vitest",
-    "lint": "prettier -c --cache . && eslint . --cache --max-warnings=0"
+    "lint": "eslint . --cache --max-warnings=0",
+    "format": "prettier -w --cache --ignore-unknown ."
   },
   "dependencies": {
     "@types/picomatch": "2.3.3",
