--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -30,6 +30,8 @@
     "@types/mdast": "^4.0.4",
     "@types/node": "^18.19.68",
     "remark-custom-heading-id": "^2.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
     "unified": "^11.0.5",
     "vfile": "^6.0.3",
     "vitest": "2.1.6"
