--- a/packages/starlight-links-validator/package.json
+++ b/packages/starlight-links-validator/package.json
@@ -23,6 +23,7 @@
     "mdast-util-mdx-jsx": "^3.1.3",
     "mdast-util-to-string": "^4.0.0",
     "picomatch": "^4.0.2",
+    "terminal-link": "^5.0.0",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
